# service_kit

./: .gitignore  Cargo.toml  README.cn.md  README.md
.cargo/: config.toml
docs/: 20250730_service_kit_design.md  20250731_cli_refactoring_design.md  20250731_forge_api_cli_design.md  20250805_frontend_typesafe_workflow_redesign.md  20250807_service_kit_enhancement_plan.md  20250807_wasm_cli_ui_design.md  20250808_mcp_integration_design.md  20250809_refactor_to_unified_crate_design.md  20250809_service_kit_refactoring_design.md
examples/product-service/: Cargo.toml
examples/product-service/src/: dtos.rs  handlers.rs  main.rs  mcp_server.rs
forge-api-cli/: Cargo.toml  debug_Cargo.toml
forge-api-cli/src/: cli.rs  client.rs  completer.rs  lib.rs  repl.rs
service-template/: Cargo.toml  Dockerfile  cargo-generate.toml  env.sample
service-template/.cargo/: config.toml
service-template/assets/: forge_cli_wasm.js  forge_cli_wasm_bg.wasm  main.js  package.json  style.css
service-template/src/: dtos.rs  handlers.rs  lib.rs  main.rs  mcp_server.rs
service_kit/: Cargo.toml  build.rs
service_kit/forge-cli-wasm/: Cargo.toml  README.md  test.html
service_kit/forge-cli-wasm/src/: lib.rs
service_kit/forge-core/: Cargo.toml
service_kit/forge-core/src/: client.rs  completer.rs  error.rs  handler.rs  lib.rs  openapi_to_mcp.rs  repl.rs  rest_router_builder.rs  wasm_completer.rs
service_kit/frontend-wasm-cli/: index.html  main.js
service_kit/service-kit-macros/: Cargo.toml
service_kit/service-kit-macros/src/: lib.rs
service_kit/src/: bootstrap.rs  cli.rs  client.rs  error.rs  handler.rs  lib.rs  main.rs  openapi_to_mcp.rs  openapi_utils.rs  rest_router_builder.rs  wasm_completer.rs
service_kit/src/api_cli/: client.rs  error.rs  mod.rs  repl.rs
service_kit/src/repl/: mod.rs
service_kit/tests/: e2e_template_generation.rs
xtask/: Cargo.toml
xtask/src/: main.rs
