[package]
name = "forge-api-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "forge_api_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive", "env"] }
colored = "3.0.0"
oas = "0.1.1"
reqwest = { version = "0.12.22", features = ["json"] }
reedline = "0.41.0"
serde = "1.0.219"
serde_json = "1.0.141"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
shlex = "1.3.0"
nu-ansi-term = "0.50.0"
