[package]
name = "{{project-name}}"
version = "0.1.1"
edition = "2021"
authors = ["{{authors}}"]
default-run = "{{project-name}}-server"

[lib]
name = "{{project-name | snake_case}}"
path = "src/lib.rs"

[[bin]]
name = "{{project-name}}-server"
path = "src/main.rs"

[[bin]]
name = "api-cli"
path = "src/bin/api-cli.rs"
# The cli feature is not yet compatible with the new architecture.
# required-features = ["service_kit/api-cli"] 

[dependencies]
service_kit = { version = "0.1.1", default-features = true }
anyhow = "1.0"
rmcp = { version = "0.5.0", features = [
    "transport-streamable-http-server",
    "transport-worker"
] }

# Web framework
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI & Schema
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Environment variables
dotenvy = "0.15"

# WASM CLI UI
rust-embed = "8.7"
axum-embed = "0.1.0"

# Feature 管理：默认全部启用，可选择性关闭
[features]
default = ["swagger-ui", "wasm-cli", "mcp"]
swagger-ui = []
wasm-cli = []
# 让模板的 `mcp` 特性联动 service_kit 的 mcp 功能
mcp = ["service_kit/mcp"]
# 可选：透传 api-cli 给 service_kit
# api-cli = ["service_kit/api-cli"]

# --- For Local Development ---
# If you are developing `service_kit` locally, uncomment the following lines
# in your project's `.cargo/config.toml` file (create it if it doesn't exist)
# to make Cargo use your local version instead of the one from git.
#
# [patch.'https://github.com/lvsoft/service_kit']
# service_kit = { path = "../service_kit" } # Note: Adjust the path if your directory structure is different.
