[package]
name = "service_kit"
version = "0.1.0"
edition = "2021"
authors = ["lvsoft"]
description = "A foundational toolkit for building high-performance, modular services in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lvsoft/service_kit"
readme = "README.md"


[lib]
proc-macro = true

[[bin]]
name = "forge-cli"
path = "src/main.rs"
required-features = ["cli-support"]

[dependencies]
# Dependencies for the proc-macro lib
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.9"

# Dependencies for the forge-cli binary
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive", "env"], optional = true }
walkdir = { version = "2.5", optional = true }
fs_extra = { version = "1.3", optional = true }

# CLI dependencies (now optional)
colored = { version = "3.0.0", optional = true }
oas = { version = "0.1.1", optional = true }
reqwest = { version = "0.12.22", features = ["json"], optional = true }
reedline = { version = "0.41.0", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.141", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
thiserror = { version = "2.0.12", optional = true }
tokio = { version = "1.47.0", features = ["full"], optional = true }
shlex = { version = "1.3.0", optional = true }
nu-ansi-term = { version = "0.50.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
ts-rs = "11.0"
toml = "0.9"

[features]
default = []
# The "cli-support" feature enables the forge-cli binary itself.
cli-support = ["dep:anyhow", "dep:clap", "dep:walkdir", "dep:fs_extra"]
# The "api-cli" feature enables the full API client logic and all its dependencies.
api-cli = [
    "cli-support", 
    "dep:colored", 
    "dep:oas", 
    "dep:reqwest", 
    "dep:reedline", 
    "dep:serde", 
    "dep:serde_json", 
    "dep:serde_urlencoded", 
    "dep:thiserror", 
    "dep:tokio", 
    "dep:shlex", 
    "dep:nu-ansi-term"
]
