[package]
name = "service_kit"
version = "0.1.0"
edition = "2021"
authors = ["lvsoft"]
description = "A foundational toolkit for building high-performance, modular services in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lvsoft/service_kit"
readme = "README.md"


[lib]
proc-macro = true

[[bin]]
name = "forge-cli"
path = "src/main.rs"
required-features = ["cli-support"]

[dependencies]
# Dependencies for the proc-macro lib
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.9"

# Dependencies for the forge-cli binary
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive", "env"], optional = true }
walkdir = { version = "2.5", optional = true }
fs_extra = { version = "1.3", optional = true }
forge-core = { path = "forge-core", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# REPL-specific dependencies
reedline = { version = "0.22.0", optional = true }
colored = { version = "2.1.0", optional = true }
nu-ansi-term = { version = "0.49.0", optional = true }
oas = { version = "0.1.1", optional = true }
shlex = { version = "1.3.0", optional = true }


[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
toml = "0.9"

[build-dependencies]
# 目前build.rs只使用std库，如果将来需要额外依赖可以在这里添加

[features]
default = []
# The "cli-support" feature enables the forge-cli binary itself.
cli-support = ["dep:anyhow", "dep:clap", "dep:walkdir", "dep:fs_extra"]
# The "api-cli" feature enables the full API client logic and all its dependencies.
api-cli = [
    "cli-support", 
    "dep:forge-core",
    "dep:tokio",
    "dep:reedline",
    "dep:colored",
    "dep:nu-ansi-term",
    "dep:oas",
    "dep:shlex"
]
