[package]
name = "product-service"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "macros"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tower-http = { version = "0.6.6", features = ["cors"] }
rmcp = { version = "0.5.0", features = [
    "client",
    "reqwest",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
    "transport-worker"
] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
rust-embed = "8.6.0"
axum-embed = "0.1.0"
 service_kit = { path = "../../service_kit", features = ["mcp"] }

[features]
default = []
