[package]
name = "forge-cli-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
forge-core = { path = "../forge-core" }
serde_json = "1.0"
once_cell = "1.8"
shlex = "1.1.0"
clap = { version = "4.5", features = ["derive", "env"] }
oas = "0.1.1"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
