[package]
name = "forge-cli-wasm"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
] }
js-sys = "0.3"
service_kit = { path = "..", features = ["cli-core"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
once_cell = "1.8"
shlex = "1.1.0"
clap = { version = "4.5", features = ["derive", "env"] }
oas = "0.1.1"
inventory = "0.3"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
