[package]
name = "forge-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["client"]
client = ["reqwest"]

[dependencies]
axum = "0.8"
once_cell = "1.19" # Added for lazy static initialization
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
oas = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
shlex = "1.3.0"

reqwest = { version = "0.12", features = ["json"], optional = true }

# Tokio is configured for WASM by disabling default features (like 'net') 
# and only enabling the ones we need.
tokio = { version = "1.0", default-features = false, features = ["rt", "macros"] }
