[package]
name = "forge-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["client-native"]
client-native = ["reqwest", "tokio", "rmcp", "reedline", "nu-ansi-term"]
wasm = []

[dependencies]
axum = { version = "0.8", features = ["json"], default-features = false }
once_cell = "1.19" # Added for lazy static initialization
inventory = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
oas = "0.1.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_urlencoded = "0.7.1"
serde_qs = "0.15.0"
thiserror = "2.0.12"
shlex = "1.3.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "macros"] }
rmcp = { version = "0.5.0", optional = true }


reqwest = { version = "0.12", features = ["json"], optional = true }

# Tokio is configured for WASM by disabling default features (like 'net') 
# and only enabling the ones we need.
tokio = { version = "1.38.0", features = ["full"], optional = true }
reedline = { version = "0.41.0", features = ["bashisms", "sqlite"], optional = true }
nu-ansi-term = { version = "0.50.0", optional = true }
