[package]
name = "service-kit-macros"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lvsoft/service_kit"
description = "Procedural macros for service_kit (e.g., #[api], #[api_dto])"
documentation = "https://docs.rs/service_kit"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
heck = "0.5.0"
inventory = "0.3"
proc-macro2 = "1.0"
utoipa = { version = "5.4", features = ["axum_extras", "openapi_extensions"] }
